name:                AdventOfCode2017
version:             0.1.0.0
synopsis:            Advent of Code 2017
homepage:            https://github.com/taylorjg/AdventOfCode2017
license:             MIT
author:              Jonathan Taylor
category:            Fun
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, containers, regex-base, regex-pcre, split
  hs-source-dirs:      Day01/lib, Day02/lib, Day03/lib, Day04/lib, Day05/lib, Day06/lib, Day07/lib
  Exposed-modules:     Day01, Day02, Day03, Day04, Day05, Day06, Day07

executable Day01
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day01/src
  default-language:    Haskell2010

test-suite Day01Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day01/test
  main-is:             Spec.hs

executable Day02
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day02/src
  default-language:    Haskell2010

test-suite Day02Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day02/test
  main-is:             Spec.hs

executable Day03
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day03/src
  default-language:    Haskell2010

test-suite Day03Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day03/test
  main-is:             Spec.hs

executable Day04
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day04/src
  default-language:    Haskell2010

test-suite Day04Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day04/test
  main-is:             Spec.hs

executable Day05
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day05/src
  default-language:    Haskell2010

test-suite Day05Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day05/test
  main-is:             Spec.hs

executable Day06
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day06/src
  default-language:    Haskell2010

test-suite Day06Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day06/test
  main-is:             Spec.hs

executable Day07
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day07/src
  default-language:    Haskell2010

test-suite Day07Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day07/test
  main-is:             Spec.hs
