name:                AdventOfCode2017
version:             0.1.0.0
synopsis:            Advent of Code 2017
homepage:            https://github.com/taylorjg/AdventOfCode2017
license:             MIT
author:              Jonathan Taylor
category:            Fun
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, containers, split, regex-base, regex-pcre, text
  hs-source-dirs:      Day01/lib, Day02/lib, Day03/lib, Day04/lib, Day05/lib,
                       Day06/lib, Day07/lib, Day08/lib, Day09/lib, Day10/lib,
                       Day11/lib,                       Day14/lib, Day15/lib,
                       Day16/lib, Day17/lib, Day18/lib,
                                             Day23/lib, Day24/lib, Day25/lib
  Exposed-modules:     Day01, Day02, Day03, Day04, Day05,
                       Day06, Day07, Day08, Day09, Day10,
                       Day11,               Day14, Day15,
                       Day16, Day17, Day18,
                                     Day23, Day24, Day25
  -- ghc-options:         -O2 -fprof-auto

executable Day01
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day01/src
  default-language:    Haskell2010

test-suite Day01Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day01/test
  main-is:             Spec.hs

executable Day02
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day02/src
  default-language:    Haskell2010

test-suite Day02Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day02/test
  main-is:             Spec.hs

executable Day03
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day03/src
  default-language:    Haskell2010

test-suite Day03Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day03/test
  main-is:             Spec.hs

executable Day04
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day04/src
  default-language:    Haskell2010

test-suite Day04Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day04/test
  main-is:             Spec.hs

executable Day05
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day05/src
  default-language:    Haskell2010

test-suite Day05Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day05/test
  main-is:             Spec.hs

executable Day06
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day06/src
  default-language:    Haskell2010

test-suite Day06Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day06/test
  main-is:             Spec.hs

executable Day07
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day07/src
  default-language:    Haskell2010

test-suite Day07Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day07/test
  main-is:             Spec.hs

executable Day08
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day08/src
  default-language:    Haskell2010

test-suite Day08Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day08/test
  main-is:             Spec.hs

executable Day09
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day09/src
  default-language:    Haskell2010

test-suite Day09Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day09/test
  main-is:             Spec.hs

executable Day10
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, split
  hs-source-dirs:      Day10/src
  default-language:    Haskell2010

test-suite Day10Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day10/test
  main-is:             Spec.hs

executable Day11
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day11/src
  default-language:    Haskell2010

test-suite Day11Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day11/test
  main-is:             Spec.hs

executable Day14
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day14/src
  default-language:    Haskell2010

test-suite Day14Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day14/test
  main-is:             Spec.hs

executable Day15
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day15/src
  default-language:    Haskell2010

test-suite Day15Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day15/test
  main-is:             Spec.hs

executable Day16
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day16/src
  default-language:    Haskell2010
  -- ghc-options:         -O2 -fprof-auto "-with-rtsopts=-p -s -h -i0.1"

test-suite Day16Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day16/test
  main-is:             Spec.hs

executable Day17
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day17/src
  default-language:    Haskell2010

test-suite Day17Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day17/test
  main-is:             Spec.hs

executable Day18
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day18/src
  default-language:    Haskell2010

test-suite Day18Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day18/test
  main-is:             Spec.hs

executable Day23
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day23/src
  default-language:    Haskell2010

test-suite Day23Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day23/test
  main-is:             Spec.hs

executable Day24
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day24/src
  default-language:    Haskell2010

test-suite Day24Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day24/test
  main-is:             Spec.hs

executable Day25
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017
  hs-source-dirs:      Day25/src
  default-language:    Haskell2010

test-suite Day25Tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.10, AdventOfCode2017, hspec
  hs-source-dirs:      Day25/test
  main-is:             Spec.hs
